--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,13 @@
+# Ignore everything by default
+*
+!metadata-manager/
+!infrastructure/
+
 cdk.out/
 __pycache__/
 **/__pycache__/
+
+.idea/
+**/.idea/
+.DS_Store
+**/.DS_Store
