--- a/metadata-manager/deps/requirements-slim.txt
+++ b/metadata-manager/deps/requirements-slim.txt
@@ -2,17 +2,18 @@
 # any complex functionalities (e.g. sync from gsheet) will require to install dependency from the full verison
 
 aws-xray-sdk # intentionally leave out version, the daily release of this dep is ok
-djangorestframework==3.15.2
+djangorestframework==3.16.0
 djangorestframework-camel-case==1.4.2
-Django==5.1.4
-django-cors-headers==4.6.0
-django-environ==0.11.2
-django-simple-history==3.7.0
+Django==5.2.2
+django-cors-headers==4.7.0
+django-environ==0.12.0
+django-simple-history==3.8.0
 drf-spectacular==0.28.0
 pyjwt==2.10.1
+django-iam-dbauth==0.2.1
 
 # See psycopg[binary] or psycopg[c] impl https://www.psycopg.org/psycopg3/docs/basic/install.html
-psycopg[binary]==3.2.3
+psycopg[binary]==3.2.9
 Werkzeug==3.1.3
 libumccr==0.4.1
 cachetools==5.5.0
